# ImprovingDiseaseDetectionBySymmetricFeatures

./: .gitignore  README.md  create_virtual_env.sh  get_dataset.sh  requirements.txt  setup.cfg  test_alignment_params.csv  train_val_alignment_params.csv
configs/: chexnet_config.yaml  experiment_set1.yaml  maskrcnn_config.yaml  sasn_config.yaml
notebooks/: ChestAlignment.ipynb  ChestXDetDataset.ipynb  Evaluation.ipynb  Heatmaps.ipynb
scripts/: evaluate.py  grid_search.py  h_param_tuning.py  main.py  trainer.py
src/medai/: config.py
src/medai/data/: datasets.py  loader.py
src/medai/models/: SASN_split.py  SASN_vanilla.py  chexnet.py  densenet.py  maskrcnn.py  sasn_wout_contrastive.py
src/medai/utils/: align_all_images.sh  callbacks.py  chest_alignment.py  count_images_per_label.py  eval_utils.py  eval_utils2.py  get_aligned_data.py  heatmaps.py  helper.py  hparam_tuning_callback.py  localization.py  loss.py  metrics.py  transforms.py  visualizer.py
