[metadata]
name = Medical_AI
version = 0.0.0
license = GPLv3
description = Medical AI Project
long_description = file: README.rst
author = Elif Cansu Yildiz
author_email = cansu96yildiz@gmail.com
classifiers= 
    Development Status :: 3 - Alpha
    Framework :: Pytorch
    Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   importlib-metadata; python_version<"3.8"

[options.packages.find]
where=src
